# temi-cli

./: Cargo.toml
src/: commands.rs  main.rs  square.rs  v1.rs
src/commands/: job_commands.rs  transcript_commands.rs
src/v1/: endpoints.rs  models.rs  results.rs
